--- a/main.css
+++ b/main.css
@@ -1,12 +1,10 @@
 p {
   color: black;
-  text-align: center;
 }
 
 h1 {
   font-style: bold;
-  font-size: 30px;
+  font-size: 70px;
   font-color: blue;
-  background-color: gray;
-  text-align: center;
+  background-color: grey;
 }
