--- a/main.css
+++ b/main.css
@@ -14,6 +14,6 @@ h1 {
   font-size: 60px;
   color: #005A31;
   background-color: #F3FAB6;
-  text-align: center;
+  text-align: left;
   margin-top: 0px;
 }
