--- a/main.css
+++ b/main.css
@@ -6,12 +6,12 @@ p {
 .grid {
   display: grid;
   background color: A4D555;
-  grid-template: repeat(4, 1fr);
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
 h1 {
   font-style: papyrus;
-  font-size: 60px;
+  font-size: 50px;
   color: #005A31;
   background-color: #F3FAB6;
   text-align: left;
