--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ p {
   width: 200px;
   height: 200px;
   display: inline-grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 h1 {
