--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ p {
 }
 
 .grid {
-  background-color: red;
+  background-color: #F3FAB6;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: center;
