--- a/main.css
+++ b/main.css
@@ -16,6 +16,8 @@ h1 {
   color: #005A31;
   background-color: #F3FAB6;
   text-align: left;
-  margin-top: 0px;
+  margin: 0px;
   padding: 0px;
+  border: 0px;
+  
 }
