--- a/main.css
+++ b/main.css
@@ -8,6 +8,8 @@ p {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: center;
+  font-size: 25px;
+  font-family: "Raleway";
 }
 
 h1 {
