--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 p {
   color: black;
-  text-align: center;
-  font-size: 20px;
+  text-align: left;
+  font-size: 30px;
   text-algn: left;
   font-family: "Trebuchet MS";
 }
