--- a/main.css
+++ b/main.css
@@ -26,7 +26,10 @@ h1 {
   color: #005A31;
   background-color: #F3FAB6;
   text-align: left;
-  margin: 0px;
+  margin-top: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 4px;
   padding: 0px;
   border: 0px;
   
