--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 p {
   color: black;
   text-align: left;
-  font-size: 30px;
+  font-size: 20px;
   text-algn: left;
   font-family: "Trebuchet MS";
 }
@@ -33,4 +33,8 @@ h1 {
   padding: 0px;
   border: 0px;
   
+}
+
+h3 {
+  font-size: 30px;
 }
