--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@ p {
 .grid {
   background-color: #F3FAB6;
   display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr 1fr;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 60px 60px;
   text-align: center;
   font-size: 30px;
   font-family: "Raleway";
