--- a/main.css
+++ b/main.css
@@ -17,12 +17,24 @@ p {
 }
 
 .a {
-  grid-row-start: 1 / span 2;
+  grid-row: 3 / span 2;
 }
 
-.b {}
-.c {}
-.d {}
+.b {
+  grid-row: 5 / span 2;
+}
+
+.c {
+  grid row: 1 / span 3;
+}
+
+.d {
+  grid row: 4 / span 3;
+}
+
+.e {
+  grid-row: 1 / span 2;
+}
 
 h1 {
   font-style: papyrus;
