--- a/main.css
+++ b/main.css
@@ -45,8 +45,8 @@ h1 {
   margin-top: 0px;
   margin-left: 0px;
   margin-right: 0px;
-  margin-bottom: 4px;
-  padding: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 4px;
   border: 0px;
 }
 
