--- a/main.css
+++ b/main.css
@@ -18,7 +18,8 @@ p {
 
 .grid2 {
   display: grid;
-  gir-template-rows: repeat(4,200px);
+  grid-template-rows: repeat(4,200px);
+  grid-template-columns: 1fr 1fr;
   text-aligh: left;
 }
 
