--- a/main.css
+++ b/main.css
@@ -65,3 +65,23 @@ align: center;
 h3 {
   font-size: 30px;
 }
+
+.f {
+  grid-row: 1;
+  grid-column: 1:
+}
+
+g{
+    grid-row: 2;
+  grid-column: 1:
+}
+
+h{
+  grid-row: 3;
+  grid-column: 1:
+}
+
+i{
+  grid-row: 4;
+  grid-column: 1:
+}
