--- a/main.css
+++ b/main.css
@@ -10,9 +10,9 @@ p {
   background-color: #F3FAB6;
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 60px 60px;
+  grid-template-rows: 60px;
   text-align: center;
-  font-size: 30px;
+  font-size: 20px;
   font-family: "Raleway";
 }
 
