--- a/main.css
+++ b/main.css
@@ -4,8 +4,12 @@ p {
   font-size: 30px;
   text-algn: left;
   font-family: "Trebuchet MS";
+  background-color: #1A5276;
 }
 
+body {
+  background-color: #1A5276;
+}
 .center {
   display: block;
   margin-left: auto;
