--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ body {
 
 .grid2 {
   display: grid;
-  grid-template-rows: repeat(4,200px);
+  grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   text-align: left;
 }
