--- a/main.css
+++ b/main.css
@@ -17,12 +17,14 @@ body {
   width: 50%;
 }
 .grid {
-  background-color: #F3FAB6;
+  background-color: #1A5276;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   text-align: center;
-  font-size: 20px;
+  font-size: 30px;
+  color: white;
   font-family: "Raleway";
+  border-bottom-color: #283747;
 }
 
 .grid2 {
