--- a/main.css
+++ b/main.css
@@ -103,8 +103,8 @@ h3 {
 .uvmLogo {
   grid-row: 3;
   grid-column: 4;
-  height: 50px;
-  width: 50px;
+  max-height: 50px;
+  max-width: 50px;
   align: center;
 }
 
