--- a/main.css
+++ b/main.css
@@ -38,6 +38,7 @@ body {
   font-family: "Raleway";
   border-bottom-color: #283747;
   border-bottom-width: 15px;
+  border-bottom: solid;
 }
 
 .grid2 {
