trying to lower the double line from the nav bar

--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@ body {
   border-bottom-color: black;
   border-bottom-width: 10px;
   border-bottom: double;
-  padding-bottom; 20px;
+  padding-bottom: 20px;
 }
 
 .grid2 {
