--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ p {
   color: white;
   text-align: left;
   font-size: 20px;
-  text-algn: left;
+  text-align: left;
   font-family: "Trebuchet MS";
   background-color: #1A5276;
 }
@@ -16,7 +16,11 @@ a:visited {
 }
 
 a:hover {
-  color: pink;
+  color: black;
+  background-color: white;
+  border-radius: 10%;
+  border-width: 20px; 
+
 }
 
 body {
@@ -33,11 +37,11 @@ body {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   text-align: center;
-  font-size: 30px;
+  font-size: 20px;
   color: white;
   font-family: "Raleway";
   border-bottom-color: black;
-  border-bottom-width: 10px;
+  border-bottom-width: 15px;
   border-bottom: double;
   padding-bottom: 20px;
 }
