trying to fix my nav bar

--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ body {
   width: 30%;
 }
 
-nav {
+.grid {
   background-color: #1A5276;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
