--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+header {
+  background-color: grey;
+  padding-top: 20px;
+}
+
 p {
   color: white;
   text-align: left;
@@ -5,6 +10,7 @@ p {
   text-align: left;
   font-family: "Trebuchet MS";
   background-color: #1A5276;
+  padding-left: 20px;
 }
 
 a:link {
@@ -47,13 +53,6 @@ body {
   padding-bottom: 20px;
 }
 
-.grid2 {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  text-align: left;
-}
-
 .a {
   grid-column: 1;
 }
@@ -74,42 +73,59 @@ body {
   grid-column: 5;
 }
 
+.grid2 {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  text-align: left;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
 h1 {
   font-style: papyrus;
   font-size: 50px;
   color: white;
-  background-color: #1A5276;
+  background-color: grey;
   text-align: left;
-  margin-top: 0px;
+  margin-top: 20px;
   margin-left: 0px;
   margin-right: 0px;
   margin-bottom: 0px;
   padding-bottom: 4px;
+  padding-left: 20px;
+  padding-right: 20px;
   border: 0px;
 }
 
 h3 {
   font-size: 30px;
+  padding-left: 20px;
 }
 
 .f {
   grid-row: 1;
-  grid-column: 1 / span 3;
+  grid-column: 1 / span 2;
 }
 
 .g {
   grid-row: 2;
-  grid-column: 2 / span 3;
+  grid-column: 2 / span 2;
 }
 
 .h {
   grid-row: 3;
-  grid-column: 1 / span 3;
+  grid-column: 1 / span 2;
 }
 
 .i {
   grid-row: 4;
-  grid-column: 2 / span 3;
+  grid-column: 2 / span 2;
+}
+
+.j {
+  grid-row: 4;
+  grid-column: 1;
 }
 
 .myimages {
