--- a/main.css
+++ b/main.css
@@ -1,15 +1,16 @@
 header {
-  background-color: grey;
+  background-color: #1A5276;
   padding-top: 20px;
+  padding-bottom: 5px;
 }
 
 p {
-  color: white;
+  color: rgb(48, 21, 21);
   text-align: left;
-  font-size: 20px;
+  font-size: 25px;
   text-align: left;
   font-family: "Trebuchet MS";
-  background-color: #1A5276;
+  background-color:lightgray;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -18,19 +19,20 @@ a:link {
   color: white;
 }
 
+.bodyLinks {
+  color:rgba(226, 125, 10, 0.562) !important;
+}
+
 a:visited {
   color: white;
 }
 
 a:hover {
-  color: black;
-  background-color: white;
-  border-radius: 10%;
-  border-width: 20px; 
+  opacity: 20%;
 }
 
 body {
-  background-color: #1A5276;
+  background-color: lightgray;
   margin: 0px;
 }
 .center {
@@ -38,42 +40,70 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 30%;
+  border-radius: 20%;
 }
 
-.grid {
+nav{
   background-color: #1A5276;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 20px;
   text-align: center;
-  font-size: 20px;
+  font-size: 25px;
   color: white;
   font-family: "Raleway";
   border-bottom-color: black;
   border-bottom-width: 15px;
   border-bottom: double;
   padding-bottom: 20px;
+  padding-top: 10px;
+  margin-bottom: 10px;
 }
 
 .a {
   grid-column: 1;
 }
 
+.a:hover{
+  font-size: 22px; 
+  box-shadow: 2px;
+}
+
 .b {
   grid-column: 2;
+}
+
+.b:hover{
+  font-size: 22px; 
+  box-shadow: 2px;
 }
 
 .c {
   grid-column: 3;
 }
 
+.c:hover{
+  font-size: 22px; 
+  box-shadow: 2px;
+}
+
 .d {
   grid-column: 4;
+}
+
+.d:hover{
+  font-size: 22px; 
+  box-shadow: 2px;
 }
 
 .e {
   grid-column: 5;
 }
 
+.e:hover{
+  font-size: 22px;
+  box-shadow: 2px; 
+}
 .grid2 {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -86,22 +116,21 @@ body {
 h1 {
   font-style: papyrus;
   font-size: 50px;
-  color: white;
-  background-color: grey;
+  color: rgb(253, 139, 8);
+  background-color:#1A5276;
   text-align: left;
-  margin-top: 20px;
-  margin-left: 0px;
-  margin-right: 0px;
-  margin-bottom: 0px;
+  margin-top: 10px;
+  margin-bottom: 5px;
   padding-bottom: 4px;
   padding-left: 20px;
   padding-right: 20px;
-  border: 0px;
+
 }
 
 h3 {
   font-size: 30px;
   padding-left: 20px;
+  color: rgb(48, 21, 21);
 }
 
 .f {
@@ -137,4 +166,82 @@ h3 {
 .j {
   grid-row: 2;
   grid-column: 1;
+}
+
+.projectsGrid{
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+  grid-template-rows: 100px 300px;
+  ;
+}
+
+#preview{
+  box-sizing: content-box;
+  border: 1px solid;
+  grid-column: 3;
+  grid-row: 2;
+  overflow: auto;
+  height: 200px;
+  padding: 0px;
+  margin: 20px;
+  border-width: 5px;
+  border-color: aqua;
+  background-color:#1A5276;
+
+  color: white;
+}
+
+#render{
+  margin: auto;
+  justify-content: center;
+  font-size: 30px;
+  grid-row: 2;
+  grid-column: 2;
+  background-color: green;
+  border-radius: 50%;
+  padding: 15px;
+}
+
+#render:hover{
+  background-color: cornflowerblue;
+}
+.sourceText{
+  box-align: start;
+  grid-column: 1;
+  grid-row: 2;
+  height: 200px;
+  border: 10px single;
+  border-width: 5px;
+  border-color: rgb(134, 6, 77);
+  background-color:#1A5276;
+  padding-left: 30px;
+  margin: 20px
+}
+
+.project-title{
+  justify-self: center;
+  grid-row: 1;
+  grid-column: 1 / span 3;
+}
+
+textarea{
+  color: white;
+}
+
+.project-description{
+
+  
+}
+
+#markdownDescription{
+  grid-row: 2;
+  grid-column: 1 / span 2;
+}
+
+#markdownScreenshot{
+  grid-row: 2;
+  grid-column: 3;
+  height: 100%;
+  width: 100%;
+  margin: auto;
 }
