--- a/main.css
+++ b/main.css
@@ -132,7 +132,10 @@ h1 {
   padding-bottom: 4px;
   padding-left: 20px;
   padding-right: 20px;
+}
 
+h2 {
+  font-size: 50px;
 }
 
 h3 {
@@ -183,79 +186,28 @@ h3 {
 
 .projectsGrid{
   display: grid;
-  grid-template-columns: 2fr 1fr 2fr;
+  grid-template-columns: 3fr 2fr;
   grid-template-rows: 100px 300px;
   ;
-}
-
-#preview{
-  box-sizing: content-box;
-  border: 1px solid;
-  grid-column: 3;
-  grid-row: 2;
-  overflow: auto;
-  height: 200px;
-  padding: 0px;
-  margin: 20px;
-  border-width: 5px;
-  border-color: aqua;
-  background-color:#1A5276;
-
-  color: white;
-}
-
-#render{
-  margin: auto;
-  justify-content: center;
-  font-size: 30px;
-  grid-row: 2;
-  grid-column: 2;
-  background-color: green;
-  border-radius: 50%;
-  padding: 15px;
-}
-
-#render:hover{
-  background-color: cornflowerblue;
-}
-.sourceText{
-  box-align: start;
-  grid-column: 1;
-  grid-row: 2;
-  height: 200px;
-  border: 10px single;
-  border-width: 5px;
-  border-color: rgb(134, 6, 77);
-  background-color:#1A5276;
-  padding-left: 30px;
-  margin: 20px
 }
 
 .project-title{
   justify-self: center;
   grid-row: 1;
-  grid-column: 1 / span 3;
-}
-
-textarea{
-  color: white;
+  grid-column: 1;
 }
 
 .project-description{
-
+  grid-row: 2;
+  grid-column: 1;
 }
 
-#markdownDescription{
+.projectImage{
   grid-row: 2;
-  grid-column: 1 / span 2;
-}
-
-#markdownScreenshot{
-  grid-row: 2;
-  grid-column: 3;
-  height: 100%;
+  grid-column: 2;
+  height: 300px;
   width: 100%;
-  margin: auto;
+  margin-top: 40px;
 }
 
 footer{
@@ -269,3 +221,5 @@ footer{
   width: 50px;
   color: rgb(253, 139, 8);
 }
+
+
