--- a/main.css
+++ b/main.css
@@ -60,7 +60,7 @@ nav{
   margin-bottom: 10px;
 }
 
-.a {
+.indexNav {
   grid-column: 1;
 }
 
@@ -69,7 +69,7 @@ nav{
   box-shadow: 2px;
 }
 
-.b {
+.projectsNav {
   grid-column: 2;
 }
 
@@ -78,7 +78,7 @@ nav{
   box-shadow: 2px;
 }
 
-.c {
+.educationNav {
   grid-column: 3;
 }
 
@@ -87,7 +87,7 @@ nav{
   box-shadow: 2px;
 }
 
-.d {
+.workNav {
   grid-column: 4;
 }
 
@@ -96,7 +96,7 @@ nav{
   box-shadow: 2px;
 }
 
-.e {
+.goalsNav {
   grid-column: 5;
 }
 
@@ -105,7 +105,7 @@ nav{
   box-shadow: 2px; 
 }
 
-.z {
+.headerImage {
   grid-column: 5;
   height: 100px;
   width: 100px;
@@ -206,8 +206,9 @@ h3 {
   grid-row: 2;
   grid-column: 2;
   height: 300px;
-  width: 100%;
+  width: 90%;
   margin-top: 40px;
+  padding-right: 40px;
 }
 
 footer{
