--- a/markdown.css
+++ b/markdown.css
@@ -5,7 +5,7 @@ body {
 #preview{
     box-sizing: content-box;
     border: 1px solid;
-    grid-column: 3 / span 2;
+    grid-column: 2 / span 2;
     grid-row: 3;
     overflow: auto;
     height: 100%;
@@ -15,17 +15,6 @@ body {
     border-color: rgb(63, 29, 65);
     background-color:rgb(226, 195, 240);
     color: black;
-  }
-  
-  button{
-    margin: auto;
-    justify-content: center;
-    font-size: 30px;
-    grid-row: 3;
-    grid-column: 2;
-    background-color: rgb(201, 253, 201);
-    border-radius: 50%;
-    padding: 15px;
   }
   
   button:hover{
@@ -51,7 +40,7 @@ body {
   .markdownGrid{
       display: grid;
       grid-template-rows: 80px 240px 300px;
-      grid-template-columns: 2fr .5fr 1fr 2fr;
+      grid-template-columns: 2fr 1.5fr 2fr;
       margin: auto;
       padding: 40px;
   }
