--- a/main.css
+++ b/main.css
@@ -43,6 +43,11 @@ body {
   border-radius: 20%;
 }
 
+.educationImages{
+  height: 15em;
+  width: 15em;
+  margin: auto;
+}
 nav{
   background-color: #1A5276;
   display: grid;
@@ -117,6 +122,7 @@ nav{
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   text-align: left;
+  padding-top: 30px;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -167,11 +173,19 @@ h3 {
 .j {
   grid-row: 4;
   grid-column: 1;
+  margin: auto;
 }
 
 .k {
   grid-row: 3;
   grid-column: 3;
+  margin: auto;
+}
+
+.l {
+  grid-row: 1;
+  grid-column: 3;
+  margin: auto;
 }
 
 .myimages {
@@ -182,6 +196,12 @@ h3 {
 .j {
   grid-row: 2;
   grid-column: 1;
+}
+
+.m {
+  grid-row: 4;
+  grid-column: 1;
+  margin: auto;
 }
 
 .projectsGrid{
