--- a/numberFinder.css
+++ b/numberFinder.css
@@ -3,19 +3,21 @@
     background-color: rgb(243, 223, 186);
     width: 10%;
     margin: auto;
+    font-size: 20px;
 }
 
-h1 {
-    
+#button {
+    margin-top: 5px;
 }
 #output {
     box-sizing: content-box;
     border: 1px solid;
     overflow: auto;
-    width: 45%;
+    width: 50%;
     margin: auto;
     background-color:rgb(243, 223, 186);
     height: 200px;
+    font-size: 20px;
 }
 
 body {
