--- a/projects/dropdown/dropdown.css
+++ b/projects/dropdown/dropdown.css
@@ -4,14 +4,14 @@
 }
 
 .dropdown-content {
-    display: none;
+    visibility: hidden;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
 }
 
 .dropdown:hover .dropdown-content {
-    display: block;
+   visibility: visible;
 }
 
 .drop-down-nav{
