--- a/markdown.css
+++ b/markdown.css
@@ -1,93 +1,96 @@
 body {
-    background-color: rgb(148, 20, 148)
+  background-color: rgb(148, 20, 148)
 }
 
 #preview{
-    box-sizing: content-box;
-    border: 1px solid;
-    grid-column: 2 / span 2;
-    grid-row: 3;
-    overflow: auto;
-    height: 100%;
-    padding: 0px;
-    margin: 20px;
-    border-width: 5px;
-    border-color: rgb(63, 29, 65);
-    background-color:rgb(226, 195, 240);
-    color: black;
-  }
+  box-sizing: content-box;
+  border: 1px solid;
+  grid-column: 2 / span 2;
+  grid-row: 3;
+  overflow: auto;
+  height: 100%;
+  padding: 0px;
+  margin: 20px;
+  border-width: 5px;
+  border-color: rgb(63, 29, 65);
+  background-color:rgb(226, 195, 240);
+  color: black;
+}
   
-  button:hover{
-    background-color: cornflowerblue;
-  }
+button:hover{
+  background-color: cornflowerblue;
+}
   
-  textarea{
-    color: black;
-  }
-  .sourceText{
-    box-align: start;
-    grid-column: 1;
-    grid-row: 3;
-    height: 100%;
-    border: 10px single;
-    border-width: 5px;
-    border-color: rgb(63, 29, 65);
-    background-color:rgb(226, 195, 240);
-    padding-left: 30px;
-    margin: 20px
-  }
+textarea{
+  color: black;
+}
 
-  .markdownGrid{
-      display: grid;
-      grid-template-rows: 80px 240px 300px;
-      grid-template-columns: 2fr 1.5fr 2fr;
-      margin: auto;
-      padding: 40px;
-  }
+.sourceText{
+  box-align: start;
+  grid-column: 1;
+  grid-row: 3;
+  height: 100%;
+  border: 10px single;
+  border-width: 5px;
+  border-color: rgb(63, 29, 65);
+  background-color:rgb(226, 195, 240);
+  padding-left: 30px;
+  margin: 20px
+}
 
-  #description {
-    font-style: papyrus;
-    font-size: 30px;
-    margin: auto;
-    grid-row: 2;
-    grid-column: 1 / span 4;
-    color: white;
-  }
+.markdownGrid{
+  display: grid;
+  grid-template-rows: 80px 240px 300px;
+  grid-template-columns: 2fr 1.5fr 2fr;
+  margin-top: 20px;
+  padding: 40px;
+  grid-gap: 15px;
+}
 
-  .project-title {
-    grid-row: 1;
-    grid-column: 1 / span 4;
-    margin: auto;
-    font-size: 70px;
-    color: white;
-  }
+#description {
+  font-style: papyrus;
+  font-size: 30px;
+  margin: auto;
+  grid-row: 2;
+  grid-column: 1 / span 4;
+  color: white;
+}
 
-  table {
-    border-collapse: collapse;
-    border: 2px solid rgb(200,200,200);
-    letter-spacing: 1px;
-    font-size: .9rem;
-    margin: auto;
-    color: black;
-  }
-  
-  td, th {
-    border: 1px solid rgb(190,190,190);
-    padding: 10px 20px;
-  }
-  
-  th {
-    background-color: rgb(235,235,235);
-  }
-  
-  td {
-    text-align: center;
-  }
-  
-  tr:nth-child(even) td {
-    background-color: rgb(250,250,250);
-  }
-  
-  tr:nth-child(odd) td {
-    background-color: rgb(245,245,245);
-  }
+.project-title {
+  grid-row: 1;
+  grid-column: 1 / span 4;
+  margin: auto;
+  font-size: 70px;
+  color: white;
+}
+
+table {
+  border-collapse: collapse;
+  border: 2px solid rgb(200,200,200);
+  letter-spacing: 1px;
+  font-size: .9rem;
+  margin: auto;
+  color: black;
+  margin-bottom: 20px;
+}
+
+td, th {
+  border: 1px solid rgb(190,190,190);
+  padding: 10px 20px;
+}
+
+th {
+  background-color: rgb(235,235,235);
+}
+
+td {
+  text-align: center;
+}
+
+tr:nth-child(even) td {
+  background-color: rgb(250,250,250);
+}
+
+tr:nth-child(odd) td {
+  background-color: rgb(245,245,245);
+}
