--- a/main.css
+++ b/main.css
@@ -43,6 +43,21 @@ body {
   justify-content: center;
 }
 
+#gradVideo{
+  float: right;
+  width: 25em;
+  height: 25em;
+  margin-right: 20px;
+}
+
+#aboutImage{
+  display: inline;
+  float: right;
+  width: 25em;
+  height: 25em;
+  border-radius: 18%;
+}
+
 .center {
   display: block;
   margin-left: auto;
@@ -71,6 +86,7 @@ nav{
   padding-top: 10px;
   margin-bottom: 10px;
   padding-bottom: 15px;
+  border-bottom: 3px grey solid;
 }
 
 .indexNav {
@@ -264,14 +280,17 @@ footer{
 
 #currentPage{
   background-color: lightgray;
-  border-top-color:black;
-  border-right-color: black;
-  border-left-color: black;
-  padding-bottom: 35px;
+  font-weight: bold;
+  padding-bottom: 9px;
   border-radius: 10%;
   padding-top: 10px;
   text-decoration-color: rgb(253, 139, 8) !important;
   color: rgb(253, 139, 8) !important;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border-left: 2px grey solid;
+  border-top: 2px grey solid;
+  border-right: 2px grey solid;
 
 }
 
@@ -289,26 +308,30 @@ a {
 .imageGrid {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
-  grid-gap: 10px;
+  margin: auto;
+  height: 200px;
 }
 
 #leftImage {
   grid-column: 1;
-  height: 30em;
-  width: 30em;
-  transform: rotate(90deg)
+  height: 27em;
+  width: 27em;
+  transform: rotate(90deg);
+  margin: auto;
 }
 
 #centerImage {
   grid-column: 2;
-  height: 30em;
-  width: 30em;
+  height: 27em;
+  width: 35em;
   transform: rotate(180deg);
+  margin: auto;
 }
 
 #rightImage {
   grid-column: 3;
-  height: 30em;
-  width: 30em;
+  height: 27em;
+  width: 27em;
   transform: rotate(90deg);
+  margin: auto;
 }
