--- a/projects/tomatotimer/timer.css
+++ b/projects/tomatotimer/timer.css
@@ -23,33 +23,37 @@ p{
 button{
     width: 80%;
     height: 30px;
-    padding: 0px;
-    margin: auto;
+    padding: 0;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 20%;
+    background-color: orange;
 }
 
 .timer{
     display: grid;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr .2fr 1fr 1fr;
     grid-template-columns: 10fr 2fr 10fr 2fr 10fr;
-    width: 40%;
     margin: auto;
+    width: 25%;
     padding-top: 150px;
 }
 
 #start {
-    grid-row: 4;
+    grid-row: 5;
     grid-column: 1;
     font-size: 20px;
 }
 
 #stop {
-    grid-row: 4;
+    grid-row: 5;
     grid-column: 5;
     font-size: 20px;
 }
 
 #restart {
-    grid-row: 4;
+    grid-row: 5;
     grid-column: 3;
     font-size: 20px;
 }
@@ -129,20 +133,41 @@ img {
     margin: auto;
 }
 
-#leftDown{
+#secondsText{
     grid-row: 3;
+    grid-column: 5;
+    margin: auto;
+    padding: 0px;
+}
+
+#minutesText{
+    grid-row: 3;
+    grid-column: 3;
+    margin: auto;
+    padding: 0px;
+}
+
+#hoursText{
+    grid-row: 3;
+    grid-column: 1;
+    margin: auto;
+    padding: 0px;
+}
+
+#leftDown{
+    grid-row: 4;
     grid-column: 1;
     margin: auto;
 }
 
 #middleDown{
-    grid-row: 3;
+    grid-row: 4;
     grid-column: 3;
     margin: auto;
 }
 
 #rightDown{
-    grid-row: 3;
+    grid-row: 4;
     grid-column: 5;
     margin: auto;
 }
