--- a/projects/guess/guess.css
+++ b/projects/guess/guess.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url("./images/questionMark.jpg");
+    background-image: url("../../images/questionMark.jpg");
     background-size: stretch;
 }
 
