--- a/main.css
+++ b/main.css
@@ -285,9 +285,8 @@ footer{
 #currentPage{
   background-color: lightgray;
   font-weight: bold;
-  padding-bottom: 9px;
+  padding: 10px;
   border-radius: 10%;
-  padding-top: 10px;
   text-decoration-color: rgb(253, 139, 8) !important;
   color: rgb(253, 139, 8) !important;
   border-bottom-left-radius: 0px;
