--- a/main.css
+++ b/main.css
@@ -241,31 +241,53 @@ td{
   margin: auto;
 }
 
-.projectsGrid{
-  display: grid;
-  grid-template-columns: 3fr 2fr;
-  grid-template-rows: 100px 300px;
-  ;
+@media (min-width: 300px){
+  .projectsGrid{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px auto 300px;
+    grid-template-areas: "title"
+                         "info"
+                        "screenshot"
+  }
+}
+
+@media (min-width:1000px){
+  .projectsGrid{
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: 100px 300px;
+    grid-template-areas: 
+    "title title"
+    "info screenshot"
+  }
 }
 
 .project-title{
-  justify-self: center;
-  grid-row: 1;
-  grid-column: 1;
+  text-align: center;
+  grid-area: title;
 }
 
 .project-description{
-  grid-row: 2;
-  grid-column: 1;
+  grid-area: info;
+  height: auto;
+  max-height: 576;
+}
+
+.project-image{
+  display: inline;
+  grid-area: screenshot;
+  align-self: center;
+  margin: auto;
+  text-align: center;
 }
 
 .projectImage{
-  grid-row: 2;
-  grid-column: 2;
+  display: inline;
   height: 300px;
-  width: 90%;
-  margin-top: 40px;
-  padding-right: 40px;
+  margin: auto;
+  align-self: center;
+  max-width: 600px;
 }
 
 footer{
@@ -301,6 +323,8 @@ footer{
 
 a {
   text-decoration: none;
+  margin: 0px;
+  padding: 0px;
 }
 
 .imageGrid {
